<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal" >
     <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

    <Button
        android:id="@+id/btnPizzaPedido"
        android:layout_width="324dp"
        android:layout_height="150dp"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/Pizza"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnEsfihaPedido"
        android:layout_height="113dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/Esfiha"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnBebidaPedido"
        android:layout_height="82dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/Bebidas"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnAltSenhaPedido"
        android:layout_width="336dp"
        android:layout_height="66dp"
        android:layout_column="0"
        android:layout_gravity="left"
        android:text="@string/AlterarSenha" />

    <Button
        android:id="@+id/btnAltDadosPedid"
        android:layout_width="335dp"
        android:layout_gravity="left"
        android:text="@string/AlterarDados" />
         
         <Space
        android:layout_column="2"
        android:layout_gravity="fill_vertical"
        android:layout_row="4" />
    </GridLayout>
</ScrollView>

</GridLayout>
